<resources>
    <string name="app_name">Workout Reporter</string>

    <string name="title_activity_new_powerlifter">New Powerlifter</string>
    <string name="title_activity_new_competition">New Competition</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_powerlifter">Powerlifter</string>
    <string name="title_competition">Competition</string>
    <string name="title_exercise">Exercise</string>
    <string name="title_empty_view">Nothing to show</string>
    <string name="title_squats">Squats</string>
    <string name="title_bench_press">Bench press</string>
    <string name="title_dead_lift">Dead lift</string>

    <string name="spinner_powerlifter">Powerlifter</string>

    <string name="menu_add_powerlifter">Add Powerlifter</string>
    <string name="menu_add_competition">Add Competition</string>
    <string name="menu_open_gallery">Gallery</string>
    <string name="menu_sign_out">Sign Out</string>

    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>

    <string name="snackbar_text_video">Video was saved</string>
    <string name="snackbar_text_powerlifter">First of all you should add a powerlifter</string>
    <string name="snackbar_text_permissions">This action requires permissions</string>
    <string name="snackbar_text_sign_in_cancelled">Sign in was cancelled</string>
    <string name="snackbar_text_no_internet_connection">No internet connection</string>
    <string name="snackbar_text_unknown_error">Unknown error</string>
    <string name="snackbar_text_unknown_sign_in_response">Unknown sign in response</string>
    <string name="snackbar_text_install_app">You should install video player</string>

    <string name="label_save">Save</string>

    <string name="edit_text_hint_name">Name</string>
    <string name="edit_text_hint_last_name">Last name</string>
    <string name="edit_text_hint_competition">Enter competition</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_show">SHOW</string>

    <string name="error_required_field">This field is required</string>
    <string name="error_short_name">This name is too short</string>
    <string name="error_short_last_name">This last name is too short</string>
    <string name="error_short_competition">This competition is too short</string>

    <string name="common_label_one_moment">Processing</string>
</resources>
