<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_add_lifter"
            android:icon="@drawable/ic_person_add_black_36dp"
            android:title="@string/menu_add_powerlifter"/>
        <item
            android:id="@+id/action_add_competition"
            android:icon="@drawable/ic_add_black_36dp"
            android:title="@string/menu_add_competition"/>
        <item
            android:id="@+id/action_open_gallery"
            android:icon="@drawable/ic_photo_album_black_36dp"
            android:title="@string/menu_open_gallery"/>
        <item
            android:id="@+id/action_sign_out"
            android:icon="@drawable/ic_exit_to_app_black_36dp"
            android:title="@string/menu_sign_out"/>
    </group>
</menu>