<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/content_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ua.com.amicablesoft.android.wr.ui.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/text_view_lifter"
        style="@style/TextViewFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_margin"
        android:text="@string/title_powerlifter"/>

    <Spinner
        android:id="@+id/spinner_powerlifter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_margin">
    </Spinner>

    <TextView
        android:id="@+id/text_view_competition"
        style="@style/TextViewFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_margin"
        android:text="@string/title_competition"/>

    <Spinner
        android:id="@+id/spinner_competition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_margin">
    </Spinner>

    <TextView
        android:id="@+id/text_view_exercise"
        style="@style/TextViewFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_margin"
        android:text="@string/title_exercise"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_button_squats"
            style="@style/RadioButtonFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_margin"
            android:text="@string/title_squats"/>

        <RadioButton
            android:id="@+id/radio_button_bench_press"
            style="@style/RadioButtonFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_margin"
            android:text="@string/title_bench_press"/>

        <RadioButton
            android:id="@+id/radio_button_dead_lift"
            style="@style/RadioButtonFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_margin"
            android:text="@string/title_dead_lift"/>
    </RadioGroup>
</LinearLayout>
